# aurelis

./: Cargo.toml  Makefile  Procfile  biome.json  buf.yaml  diesel.toml  docker-compose.yaml
crates/admin-panel/src-tauri/: Cargo.toml  tauri.conf.json
crates/admin-panel/src-tauri/capabilities/: default.json
crates/admin-panel/src-tauri/src/: lib.rs  main.rs
crates/api-server/: Cargo.toml  build.rs
crates/api-server/migrations/2026-03-10-032311-0000_game-setup/: down.sql  up.sql
crates/api-server/migrations/2026-03-10-043533-0001_drop-accounts-region/: down.sql  up.sql
crates/api-server/migrations/2026-03-10-060523-0000_rename-character-classes/: down.sql  up.sql
crates/api-server/migrations/2026-03-10-124340-0000_add-slug-to-item/: down.sql  up.sql
crates/api-server/migrations/2026-03-10-130713-0000_add-inventory-type-to-item/: down.sql  up.sql
crates/api-server/migrations/2026-03-10-131439-0000_remove-required-columns-for-items/: down.sql  up.sql
crates/api-server/migrations/2026-03-10-133107-0000_add-new-equipment-slots/: down.sql  up.sql
crates/api-server/migrations/2026-03-10-150555-0000_refactor-inventory/: down.sql  up.sql
crates/api-server/migrations/2026-03-10-151223-0000_add-updated-at-to-inventory/: down.sql  up.sql
crates/api-server/migrations/2026-03-10-164049-0000_update-items-table/: down.sql  up.sql
crates/api-server/migrations/2026-03-10-194402-0000_remove-slot-index-constraint/: up.sql
crates/api-server/migrations/2026-03-12-023633-0000_create_generate_slug_function/: down.sql  up.sql
crates/api-server/migrations/2026-03-12-023805-0000_snapshot_schema/: down.sql  up.sql
crates/api-server/migrations/2026-03-14-180000_rename_item_instance_gem_slots/: down.sql  up.sql
crates/api-server/migrations/2026-03-14-230000_add_player_character_skill_unlocks/: down.sql  up.sql
crates/api-server/proto/: auth.proto  character.proto  inventory.proto
crates/api-server/src/: app.rs  config.rs  error.rs  lib.rs  main.rs  proto.rs
crates/api-server/src/app/: bootstrap.rs  grpc_server.rs  http.rs  mod.rs  openapi.rs  state.rs
crates/api-server/src/db/: mod.rs  schema.rs
crates/api-server/src/dto/: auth.rs
crates/api-server/src/grpc/: auth.rs  character.rs  internal_game.rs  inventory.rs  mod.rs
crates/api-server/src/models/: account.rs  character.rs  character_class.rs  character_class_path.rs  character_class_path_class.rs  character_consumable_slot.rs  character_location.rs  character_quest.rs  character_skill.rs  character_skill_slot.rs  currency_origin.rs  currency_transaction.rs  dungeon.rs  dungeon_mob.rs  equipment.rs  equipment_slot.rs  inventory.rs  inventory_detailed_item.rs  inventory_item.rs  inventory_type.rs  item.rs  item_instance.rs  item_instance_gem.rs  item_rarity.rs  mob.rs  mob_drop_rate.rs  mob_type.rs  mod.rs  player_account_quest.rs  player_character.rs  player_character_quest.rs  quest.rs  quest_status.rs  skill.rs
crates/api-server/src/repositories/: account.rs  character.rs  dungeon.rs  inventory.rs  item.rs  item_instance.rs  mob.rs  mob_drop_rate.rs  mod.rs  quest.rs
crates/api-server/src/routes/: account.rs  auth.rs  character.rs  middlewares.rs  mod.rs
crates/api-server/src/services/: account.rs  auth.rs  character.rs  character_skill.rs  equipment.rs  hash.rs  inventory.rs  item.rs  item_instance.rs  jwt.rs  mob.rs  mob_drop_rate.rs  mod.rs  password.rs
crates/api-server/src/utils/: datetime.rs  extractors.rs  mod.rs  parsers.rs  slug.rs  validation.rs
crates/game-server/: Cargo.toml
crates/game-server/src/: lib.rs  main.rs  server_config.rs
crates/game-server/src/app/: mod.rs
crates/game-server/src/events/: mod.rs  player_connection.rs
crates/game-server/src/network/: auth.rs  mod.rs  plugin.rs  systems.rs
crates/game-server/src/resources/: client_sessions.rs  connected_players.rs  internal_api.rs  mod.rs  runtime_characters.rs  server_boot_state.rs
crates/game-server/src/runtime/: builder.rs  character.rs  client_snapshot.rs  equipment_change.rs  equipped_item_instance.rs  gem_rolls.rs  gem_socket.rs  identification.rs  item_instance_rolls.rs  mod.rs  modifier.rs  refinement.rs  skill_effects.rs  use_item.rs  use_skill.rs
crates/shared/: Cargo.toml  build.rs
crates/shared/proto/: internal_game.proto  inventory.proto
crates/shared/src/: lib.rs  net.rs  proto.rs
crates/shared/src/data/: classes.rs  dungeons.rs  items.rs  (+1 more)
(+214 files in other folders)
