[package]
name = "api-server"
version = "0.1.0"
edition = "2024"

[dependencies]
bigdecimal = { version = "0.4", features = ["serde"] }
async-trait = "0.1.89"
axum = "0.8.8"
bcrypt = "0.19.0"
chrono = { version = "0.4.44", features = ["serde"] }
diesel = { version = "2.3.6", features = ["postgres", "chrono", "r2d2", "uuid", "serde_json", "numeric"] }
diesel_migrations = "2.3.1"
dotenvy = "0.15.7"
prometheus = "0.14.0"
r2d2 = "0.8.10"
redis = { version = "1.0.5", features = ["tokio-rustls-comp", "connection-manager"] }
reqwest = { version = "0.13.2", features = ["json"] }
rustls = { version = "0.23.37", default-features = false, features = ["std", "aws_lc_rs"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sysinfo = "0.38.4"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
uuid = { version = "1.22.0", features = ["v4", "serde"] }
validator = { version = "0.20.0", features = ["derive"] }
regex = "1"
shared = { path = "../shared" }
anyhow = "1.0.102"
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["aws_lc_rs"] }
tonic = "0.14.5"
prost = "0.14.3"
tonic-prost = "0.14.5"
tonic-reflection = "0.14.5"

[build-dependencies]
tonic-prost-build = "0.14.5"
protoc-bin-vendored = "2.0"
