[package]
name = "game-server"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.18.1", default-features = false }
bevy_renet = { version = "4.0.1", features = ["netcode"] }
bincode = "1.3.3"
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["aws_lc_rs"] }
serde = { version = "1.0.228", features = ["derive"] }
shared = { path = "../shared" }
tokio = { version = "1.50.0", features = ["rt-multi-thread"] }
tonic = "0.14.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
uuid = { version = "1.22.0", features = ["serde"] }
