[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
bigdecimal = { version = "0.4", features = ["serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
utoipa = { version = "5.4.0", features = ["axum_extras"] }
uuid = { version = "1.22.0", features = ["v4", "serde"] }
